smaller images, soft hyphens in more places, removed empty image gallery from Landahl and fixed some spacings

--- a/src/styles/page.css.styl
+++ b/src/styles/page.css.styl
@@ -3,6 +3,11 @@
 #page
   margin 40px 0
 
+  ol
+    margin-left 0
+    li
+      list-style inherit
+
   li
     font-family serifFontStack
     line-height 1.75
